--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14395,3 +14395,11 @@ label {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
+/* Portrait and Landscape */
+
+@media screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  h3 {
+    margin-top: 30px !important;
+  }
+}
+
