--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -86,3 +86,13 @@ label {
     border-radius: 10px;
     box-shadow: inset 0 0 6px rgba(0,0,0,.2);
 }
+
+// Media Query
+/* Portrait and Landscape */
+@media screen 
+    and (min-device-width : 320px)
+    and (max-device-width : 480px) {
+        h3 {
+            margin-top: 30px !important;
+        }
+}
